force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/ShGl_DisableFunctionalityLogic__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Global custom setting to conditionally disable certain functionality in code. Differs from Disable Business Logic Custom setting. This custom settings only certain methods would be using - whole trigger / workflow / etc will not be bypassed</description>
    <label>DisableFunctionalityLogic</label>
</CustomObject>