force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_account_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Allow_account_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow account Transfer</label>
    <type>Checkbox</type>
</CustomField>