force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Asset_Product_Account_Updates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Asset_Product_Account_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Asset Product/Account Updates</label>
    <type>Checkbox</type>
</CustomField>