force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Changes_UserTerritoryAssociation__c.field-meta.xml
<CustomField>
    <fullName>Allow_Changes_UserTerritoryAssociation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL21-320: To restrict non-ETM users to create/edit UTA records</description>
    <label>Allow Changes UserTerritoryAssociation</label>
    <type>Checkbox</type>
</CustomField>