force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Contact_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Allow_Contact_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow ContactTransfer</label>
    <type>Checkbox</type>
</CustomField>