force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Opportunity_Type_Changes__c.field-meta.xml
<CustomField>
    <fullName>Allow_Opportunity_Type_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is true, block trigger automation for this Opportunity Type field on Opportunity.</description>
    <inlineHelpText>If it is true, block trigger automation for this Opportunity Type field on Opportunity.</inlineHelpText>
    <label>Allow Opportunity Type Changes</label>
    <type>Checkbox</type>
</CustomField>