force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Oppty_Stage_Update_to_ClosedAdmin__c.field-meta.xml
<CustomField>
    <fullName>Allow_Oppty_Stage_Update_to_ClosedAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, User can set Opportunity Stage to &apos;7 Closed Admin&apos; and reopen Opportunity from &apos;7 Closed Admin&apos; stage.</description>
    <label>Allow Oppty Stage Update to ClosedAdmin</label>
    <type>Checkbox</type>
</CustomField>