force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Oppty_Stage_Update_to_ClosedWon__c.field-meta.xml
<CustomField>
    <fullName>Allow_Oppty_Stage_Update_to_ClosedWon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Opportunity Stage Update to Closed Won</description>
    <inlineHelpText>Allow Opportunity Stage Update to Closed Won</inlineHelpText>
    <label>Allow Oppty Stage Update to ClosedWon</label>
    <type>Checkbox</type>
</CustomField>