force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_SDR_Credit_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_SDR_Credit_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MKt24-1057 Inside sales ops would select the field to true when the SDR credit does not comply with the meeting completed.</description>
    <label>Allow SDR Credit Override</label>
    <type>Checkbox</type>
</CustomField>