force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Updating_Closed_Lost_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Allow_Updating_Closed_Lost_Oppty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL-510 -- Adding to allow updating opptys when they are in Closed Lost stage</description>
    <label>Allow Updating Closed Lost Oppty</label>
    <type>Checkbox</type>
</CustomField>