force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Allow_Updating_Closed_Won_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Allow_Updating_Closed_Won_Oppty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow Updating Closed Won Oppty</description>
    <inlineHelpText>Allow Updating Closed Won Oppty</inlineHelpText>
    <label>Allow Updating Closed Won Oppty</label>
    <type>Checkbox</type>
</CustomField>