force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_Account_Old_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Old_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable Account Old Trigger</description>
    <inlineHelpText>Disable Account Old Trigger</inlineHelpText>
    <label>Disable Account Old Trigger</label>
    <type>Checkbox</type>
</CustomField>