force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_Asset_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Asset_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable_Asset_Validation__c</label>
    <type>Checkbox</type>
</CustomField>