force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_old_RMA_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_old_RMA_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disable old RMA Trigger</label>
    <type>Checkbox</type>
</CustomField>