force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_Opportunity_Old_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Old_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disable Opportunity Old Trigger
Switch on and off between old and new triggers</description>
    <label>Disable Opportunity Old Trigger</label>
    <type>Checkbox</type>
</CustomField>