force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_OpportunityValidationRules__c.field-meta.xml
<CustomField>
    <fullName>Disable_OpportunityValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opportunity Validation Rules</label>
    <type>Checkbox</type>
</CustomField>