force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_Order_Old_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Order_Old_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Order Old Trigger 
Switch on and off between old and new triggers</description>
    <label>Disable Order Old Trigger</label>
    <type>Checkbox</type>
</CustomField>