force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_Quote_Clone_Date__c.field-meta.xml
<CustomField>
    <fullName>Disable_Quote_Clone_Date__c</fullName>
    <description>Date time to determine which Quotes can not be cloned. The quotes prior to specified date time will not be allowed to clone.</description>
    <label>Disable Quote Clone Date</label>
    <type>DateTime</type>
</CustomField>