force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Disable_Rubrik_Specific_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Rubrik_Specific_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Rubrik Specific Validation Rules</description>
    <inlineHelpText>Disable Rubrik Specific Validation Rules</inlineHelpText>
    <label>Disable Rubrik Specific Validation Rules</label>
    <type>Checkbox</type>
</CustomField>