force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/DisableDemandMatrixCalculation__c.field-meta.xml
<CustomField>
    <fullName>DisableDemandMatrixCalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Disable Demand Matrix Calculation</description>
    <inlineHelpText>To Disable Demand Matrix Calculation</inlineHelpText>
    <label>Disable Demand Matrix Calculation</label>
    <type>Checkbox</type>
</CustomField>