force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/DisableHoldOffLogic__c.field-meta.xml
<CustomField>
    <fullName>DisableHoldOffLogic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SF-656 This field need to be check in order to bypass HOld Off Tracking Logic on Opportunity and Order Trigger</description>
    <inlineHelpText>This field need to be check in order to bypass HOld Off Tracking Logic on Opportunity and Order Trigger</inlineHelpText>
    <label>DisableHoldOffLogic</label>
    <type>Checkbox</type>
</CustomField>