force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/DisableOpportunityAutoAcceptPO__c.field-meta.xml
<CustomField>
    <fullName>DisableOpportunityAutoAcceptPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opportunity Auto Accept PO</label>
    <type>Checkbox</type>
</CustomField>