force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Enable_Convert_Logic_on_Lead__c.field-meta.xml
<CustomField>
    <fullName>Enable_Convert_Logic_on_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Convert Logic on Lead</label>
    <type>Checkbox</type>
</CustomField>