force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Enable_Lead_Business_Unit_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>Enable_Lead_Business_Unit_Field_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Lead Business Unit Field Update</description>
    <inlineHelpText>Check this field to enable Lead&apos;s Business Unit Field update which cannot be changed once populated</inlineHelpText>
    <label>Enable Lead Business Unit Field Update</label>
    <type>Checkbox</type>
</CustomField>