force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Enable_Oppty_Business_Unit_Field_Update__c.field-meta.xml
<CustomField>
    <fullName>Enable_Oppty_Business_Unit_Field_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Oppty Business Unit Field Update</description>
    <inlineHelpText>Enable Oppty Business Unit Field Update</inlineHelpText>
    <label>Enable Oppty Business Unit Field Update</label>
    <type>Checkbox</type>
</CustomField>