force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/EnableImporttoSalesloftButton__c.field-meta.xml
<CustomField>
    <fullName>EnableImporttoSalesloftButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableImporttoSalesloftButton</label>
    <type>Checkbox</type>
</CustomField>