force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/ETM_Allow_Archiving_Territory_Model__c.field-meta.xml
<CustomField>
    <fullName>ETM_Allow_Archiving_Territory_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETM Allow Archiving Territory Model</label>
    <type>Checkbox</type>
</CustomField>