force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/ETM_Manage_Territory_Stage__c.field-meta.xml
<CustomField>
    <fullName>ETM_Manage_Territory_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETM Manage Territory Stage</label>
    <type>Checkbox</type>
</CustomField>