force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/ETM_Manage_UTA_Stage__c.field-meta.xml
<CustomField>
    <fullName>ETM_Manage_UTA_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETM Manage UTA Stage</label>
    <type>Checkbox</type>
</CustomField>