force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Is_Datos_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Datos_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag should be checked for Datos User or Profile
Will be used in logic to enable or disable functionality logic</description>
    <inlineHelpText>This flag should be checked for Datos User or Profile
Will be used in logic to enable or disable functionality logic</inlineHelpText>
    <label>Is Datos User</label>
    <type>Checkbox</type>
</CustomField>