force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/fields/Override_Manual_PO_Accept_Validations__c.field-meta.xml
<CustomField>
    <fullName>Override_Manual_PO_Accept_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Manual PO Accept Validations</label>
    <type>Checkbox</type>
</CustomField>