force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Disable_OpportunityValidationRules__c</columns>
    <columns>Allow_Opportunity_Type_Changes__c</columns>
    <columns>Allow_Oppty_Stage_Update_to_ClosedWon__c</columns>
    <columns>Allow_Updating_Closed_Won_Oppty__c</columns>
    <columns>Enable_Lead_Business_Unit_Field_Update__c</columns>
    <columns>Enable_Oppty_Business_Unit_Field_Update__c</columns>
    <columns>Is_Datos_User__c</columns>
    <columns>Disable_Account_Old_Trigger__c</columns>
    <columns>Disable_Opportunity_Old_Trigger__c</columns>
    <columns>Allow_account_Transfer__c</columns>
    <columns>Enable_Convert_Logic_on_Lead__c</columns>
    <columns>Allow_Changes_UserTerritoryAssociation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>