force-app/main/default/objects/ShGl_DisableFunctionalityLogic__c/listViews/All_with_fields.listView-meta.xml
<ListView>
    <fullName>All_with_fields</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Allow_Oppty_Stage_Update_to_ClosedWon__c</columns>
    <columns>Enable_Lead_Business_Unit_Field_Update__c</columns>
    <columns>Enable_Oppty_Business_Unit_Field_Update__c</columns>
    <columns>Is_Datos_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with fields</label>
</ListView>